<resources>
    <string name="app_name">CinemaApp</string>
    <string name="nav_home">Home</string>
    <string name="ContactText"><u>Contact</u></string>
    <string name="nav_favorites">Favorites</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="nav_now_in_cinema">Now in cinema</string>
    <string name="nav_to_be_expected">To be expected</string>
    <string name="nav_deals_events"><![CDATA[Deals & events]]></string>
    <string name="nav_benefit_card">Benefit card</string>
    <string name="nav_contact">Contact</string>
    <string name="logo">logo</string>
    <string name="toolbar_logo">Toolbar logo</string>
    <string name="title_activity_maps">Map</string>
</resources>
