<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_now_in_cinema"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/nav_now_in_cinema" />
        <item
            android:id="@+id/nav_to_be_expected"
            android:icon="@drawable/ic_more_vert_black_24dp"
            android:title="@string/nav_to_be_expected" />
        <item
            android:id="@+id/nav_deals_events"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_deals_events" />
        <item
            android:id="@+id/nav_benefit_card"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/nav_benefit_card" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_contact" />
    </group>
    <!--
        <item android:title="Communicate">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="Share" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Send" />
            </menu>
        </item>
    -->
</menu>
